[package]
name = "judge-core"
version = "0.1.0"
edition = "2018"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
libseccomp = "0.3"
nix = "0.26"
log = "0.4"
anyhow = "1.0"
serde = "1"
serde_derive = "1"
serde_json = "1"

[dev-dependencies]
env_logger = "0.10.0"