[package]
name = "judge-core"
version = "0.1.0"
edition = "2018"
license = "MPL-2.0"
description = "A judge library for online judge system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
libseccomp = "0.3"
nix = "0.27"
log = "0.4"
anyhow = "1.0"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_yaml = "0.9"

[dev-dependencies]
env_logger = "0.10.0"