[package]
name = "judge-core"
version = "0.1.0"
edition = "2018"
license = "MPL-2.0"
description = "A judge library for online judge system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
libseccomp = "0.3"
nix = { version = "0.28", features = ["event", "fs", "process", "resource"] }
log = "0.4"
anyhow = "1.0"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_yaml = "0.9"

[dev-dependencies]
# Need to lock the version of env_logger to 0.10.0
# 0.11.0 will break the test currently
env_logger = "0.11.0"
