[package]
name = "judge-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "helloworld-server"
path = "src/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/client.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.8", features = ["tls"] }
tokio-stream = "0.1"
prost = "0.11.3"

[build-dependencies]
tonic-build = { version = "0.8", features = ["prost"] }