[package]
name = "judger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
judge-core = { path = "../judge-core" }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Client
reqwest = { version = "0.12", features = ["json"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
actix-web = "4"

# Openapi generate
utoipa = { version = "5", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }

# Support global variable
lazy_static = "1.4"

# Log & settings
log = "0.4"
env_logger = "0.11"
dotenv = "0.15.0"
structopt = "0.3"

# Serialization & data structure
serde = "1"
serde_derive = "1"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

# error handling
anyhow = "1"
thiserror = "1"

uuid = { version = "1.4", features = ["serde", "v4"] }